--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,7 +6,7 @@ runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter="*.bank *.dll"
+include_filter="*.bank"
 exclude_filter=""
 export_path="exports/Brackey Dive.zip"
 encryption_include_filters=""
