--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -112,10 +112,11 @@ platform="Web"
 runnable=true
 dedicated_server=false
 custom_features=""
-export_filter="all_resources"
+export_filter="scenes"
+export_files=PackedStringArray("res://main/main.tscn", "res://Menu/menu.tscn", "res://Nav/Map/nav_map.tscn", "res://Nav/Player/player.tscn", "res://Tilt/tilt_map.tscn", "res://audio.tscn", "res://Click/button_prompt.tscn", "res://Click/click_map.tscn", "res://Click/scroll_prompt.tscn", "res://Click/timer_component.tscn")
 include_filter=""
 exclude_filter=""
-export_path="exports/Brackey Paddle/index.html"
+export_path="exports/Brackey Paddle 2/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -125,7 +126,7 @@ script_encryption_key=""
 [preset.2.options]
 
 custom_template/debug=""
-custom_template/release=""
+custom_template/release="2.0"
 variant/extensions_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
